# creonit-test

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  manage.py  pyproject.toml  run.sh
api/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_parent_urlmodel.py  0003_alter_urlmodel_slug_alter_urlmodel_url.py  0004_alter_urlmodel_url.py
creonit_test/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: tree.json  user.json
